fix(EEL_task_3) repositories small issues fixed